<resources>
    <string name="app_name">@string/schedule</string>

    <string name="schedule">Розклад</string>

    <string name="settings">Налаштування</string>

    <!--Activities name-->
    <string name="settings_activity_name">@string/settings</string>
    <string name="add_schedule_activity">Додавання розкладу</string>
    <string name="create_or_update_subject_activity">Редагування предмету</string>
    <string name="remove_schedule_activity">Видалення розкладу</string>

    <!--Notifications-->
    <string name="main_notification_channel_name">Головне</string>
    <string name="next_subject_notif_title">Завтра пари!</string>
    <string name="next_subject_notif_text">Перша пара: </string>

    <!--Main Activity-->
    <!--Bottom Navigation View Menu-->
    <string name="schedule_bottom_navigation">@string/schedule</string>
    <string name="calendar_bottom_navigation">Календар</string>
    <string name="editing_bottom_navigation">Редагування</string>

    <!--Navigation View Menu-->
    <string name="settings_navigation">@string/settings</string>
    <string name="add_schedule_navigation">Додати розклад</string>
    <string name="schedule_item_navigation">Групи</string>

    <!--Calendar Fragment-->
    <string name="hello_blank_fragment">Серпень</string>

    <!--Add Schedule Activity-->
    <string name="confirmGroupName_button_text_addGroupActivity">Ок</string>
    <string name="createGroup_button_text_addGroupActivity">Створити</string>
    <string name="groupName_editText_hint_addScheduleActivity">Введіть назву групи</string>

    <!--Calendar Week-->
    <string name="item_week_calendar_monday">Пн</string>
    <string name="item_week_calendar_tuesday">Вт</string>
    <string name="item_week_calendar_wednesday">Ср</string>
    <string name="item_week_calendar_thursday">Чт</string>
    <string name="item_week_calendar_friday">Пт</string>
    <string name="item_week_calendar_saturday">Сб</string>
    <string name="item_week_calendar_sunday">Нд</string>
    <string name="create_or_update_subject_activity_menu_check">Підтвердити</string>
    <string name="activity_create_or_update_subject_name_hint">Назва предмету</string>
    <string name="activity_create_or_update_subject_full_name_hint">Повна назва</string>
    <string name="activity_create_or_update_subject_teacher_hint">Викладач</string>
    <string name="activity_create_or_update_subject_cabinet_hint">Аудиторія</string>

    <string name="first_week">Перший тиждень</string>
    <string name="second_week">Другий тиждень</string>
    <string name="schedule_manually_creation_message">Використовуючи вкладку \'Редагування\' Ви можете створювати та редагувати свій розклад!</string>
    <string name="schedule_manually_creation_message_title">Створення розкладу вручну</string>
    <string name="ok">OK</string>
    <string name="remove_schedule_navigation">Видалити розклад</string>

    <!--Preferences titles-->
    <string name="weeks_prefs_title">Поточний тиждень</string>

    <!--Preferences keys-->
    <string name="weeks_prefs_key" translatable="false">weeks_prefs_key</string>

    <!--Preferences values-->
    <string name="first_week_prefs_value">first_week</string>
    <string name="second_week_prefs_value">second_week</string>
    <string name="pick_current_week_title">Виберіть поточний тиждень</string>
    <string name="pick_current_week_msg">Якщо ваш розклад складається тільки з одного тижня - виберіть \'Перший тиждень\'</string>
    <string name="next_subject_notify_key" translatable="false">next_subj_notify</string>
    <string name="next_subject_notify_title">Повідомлення про предмети</string>
    <string name="next_subject_notify_summaryOff">Повідомлення не будуть приходити</string>
    <string name="next_subject_notify_summaryOn">Повідомлення будуть приходити за день до початку пар</string>
    <string name="add_schedule_info">Щоб отримати розклад групи з КПІ, натисніть кнопку \"ОК\". Для інших університетів потрібно вводити розклад вручну, натиснувши кнопку \"Створити\".</string>

    <string name="info_description">Важлива інформація</string>
    <string name="direction_content_desc_left">Вліво</string>
    <string name="direction_content_desc_right">Вправо</string>

    <string name="parsing_error">Не вдалося отримати розклад! Можливо ви ввели неправильну назву групи або відсутній інтернет.</string>

    <string name="activity_calendar_detail_no_data">Здається, сьогодні у вас немає пар</string>
    <string name="fragment_schedule_detail_no_data">Здається, у вас немає розкладу</string>
    <string name="subject_number">Номер предмету:</string>
    <string name="subject_type">Тип предмету:</string>
    <string name="subject_notification_start_text">Завтрашні пари</string>
    <string name="notify_category">Повідомлення</string>
    <string name="next_subject_time_title">Час показу повідомлення</string>
    <string name="next_subject_time_key" translatable="false">next_subject_notify_key</string>
    <string name="next_subject_time_disable">Показ повідомлень вимкнено</string>
    <string name="next_subject_time_enabled">Повідомлення будуть приходити в</string>

    <string name="schedule_notification_time_def_value">21</string>
    <string name="next_subject_time_summary">Вибір часу показу повідомлення</string>

</resources>
