<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:title="@string/weeks_prefs_title"
        android:key="@string/weeks_prefs_key"
        android:defaultValue="@string/first_week_prefs_value"
        android:entries="@array/weeks"
        android:entryValues="@array/weeks_values"/>
    <PreferenceCategory android:title="@string/notify_category">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/next_subject_notify_key"
            android:title="@string/next_subject_notify_title"
            android:summaryOff="@string/next_subject_notify_summaryOff"
            android:summaryOn="@string/next_subject_notify_summaryOn" />

        <ListPreference android:defaultValue="@string/schedule_notification_time_def_value"
            android:dependency="@string/next_subject_notify_key"
            android:entries="@array/schedule_notifications_time"
            android:entryValues="@array/schedule_notifications_time_values"
            android:key="@string/next_subject_time_key"
            android:summary="@string/next_subject_time_summary"
            android:title="@string/next_subject_time_title" />
    </PreferenceCategory>

</PreferenceScreen>