<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/schedule_item_navigation"
        android:orderInCategory="1"
        android:title="@string/schedule_item_navigation">
        <menu android:id="@+id/schedule_list_navigation">
            <group android:id="@+id/schedule_list_navigation_group"/>
        </menu>
    </item>
    <item android:title="@string/add_schedule_navigation"
        android:orderInCategory="1"
        android:id="@+id/add_schedule_navigation"/>
    <item android:title="@string/remove_schedule_navigation"
        android:orderInCategory="2"
        android:id="@+id/remove_schedule_navigation"/>
    <item android:title="@string/settings_navigation"
        android:id="@+id/settings_navigation"
        android:orderInCategory="3"/>
    <item android:title="Notification"
        android:id="@+id/noti_navigation"
        android:orderInCategory="4"/>
</menu>