<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/month_fragment_calendar_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Text view"
        android:textSize="24sp"/>

    <TableLayout
        android:id="@+id/calendar_fragment_calendar_unit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month_fragment_calendar_unit">

        <TableRow>

            <TextView
                style="@style/CalendarWeekDaysName"
                android:text="@string/item_week_calendar_monday" />

            <TextView
                style="@style/CalendarWeekDaysName"
                android:text="@string/item_week_calendar_tuesday" />

            <TextView
                style="@style/CalendarWeekDaysName"
                android:text="@string/item_week_calendar_wednesday" />

            <TextView
                style="@style/CalendarWeekDaysName"
                android:text="@string/item_week_calendar_thursday" />

            <TextView
                style="@style/CalendarWeekDaysName"
                android:text="@string/item_week_calendar_friday" />

            <TextView
                style="@style/CalendarWeekDaysName"
                android:text="@string/item_week_calendar_saturday" />

            <TextView
                style="@style/CalendarWeekDaysName"
                android:text="@string/item_week_calendar_sunday" />
        </TableRow>

        <TableRow>

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />
        </TableRow>

        <TableRow>

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />
        </TableRow>

        <TableRow>

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />
        </TableRow>

        <TableRow>

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />
        </TableRow>

        <TableRow>

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />
        </TableRow>

        <TableRow>

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />

            <include layout="@layout/calendar_week_item" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>

